--- a/Win32_utilities/Win32_utilities.vcxproj
+++ b/Win32_utilities/Win32_utilities.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="win32_textWindow.h" />
     <ClInclude Include="win32_textWindowThread.h" />
     <ClInclude Include="win32_thread.h" />
+    <ClInclude Include="win32_tooltip.h" />
     <ClInclude Include="win32_util.h" />
     <ClInclude Include="win32_util_resource.h" />
     <ClInclude Include="win32_viewCollection.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="win32_stopwatch.cpp" />
     <ClCompile Include="win32_textWindow.cpp" />
     <ClCompile Include="win32_thread.cpp" />
+    <ClCompile Include="win32_tooltip.cpp" />
     <ClCompile Include="win32_util.cpp" />
     <ClCompile Include="win32_winManager.cpp" />
   </ItemGroup>
