--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -108,7 +108,7 @@ STYLE DS_3DLOOK | DS_CENTER | DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POP
 CAPTION "Display options"
 FONT 8, "Ms Shell Dlg"
 {
-    AUTOCHECKBOX    "Animals",       IDM_ANIMALS,         25, 14, 60, 8, 0, WS_EX_LEFT
+    AUTOCHECKBOX    "Individuals",   IDM_INDIVIDUALS,     25, 14, 60, 8, 0, WS_EX_LEFT
     AUTORADIOBUTTON "Mutation rate", IDM_MUT_RATE,        25, 34, 60, 8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
     AUTORADIOBUTTON "Fertility",     IDM_FERTILITY,       25, 47, 60, 8, 0, WS_EX_LEFT
     AUTORADIOBUTTON "Food",          IDM_FOOD_STOCK,      25, 60, 60, 8, 0, WS_EX_LEFT
