Build timestamp in "About" box

--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -68,15 +68,16 @@ IDC_EVOLUTION_MAIN MENU
 // Dialog resources
 //
 LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
-IDD_ABOUTBOX DIALOGEX 0, 0, 170, 62
+IDD_ABOUTBOX DIALOGEX 0, 0, 170, 74
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
-CAPTION "Info über Evolution"
+CAPTION "About Evolution"
 FONT 8, "MS Shell Dlg", 0, 0, 1
 {
     ICON          "", IDC_STATIC, 14, 14, 21, 20, SS_ICON, WS_EX_LEFT
-    LTEXT         VER_PRODUCTNAME_STR,  IDC_STATIC, 42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
-    LTEXT         "Copyright (C) 2018", IDC_STATIC, 42, 26, 114,  8, SS_LEFT, WS_EX_LEFT
-    DEFPUSHBUTTON "OK",                 IDOK,      113, 41,  50, 14, WS_GROUP, WS_EX_LEFT
+    LTEXT         VER_PRODUCTNAME_STR,  IDC_STATIC,    42, 14, 114,  8, SS_LEFT | SS_NOPREFIX, WS_EX_LEFT
+	LTEXT         "Compile time",       IDC_STATIC,    42, 26, 114,  8, SS_LEFT,  WS_EX_LEFT
+	LTEXT         "",                   IDD_TIMESTAMP, 42, 38, 114,  8, SS_LEFT,  WS_EX_LEFT
+	DEFPUSHBUTTON "OK",                 IDOK,         113, 53,  50, 14, WS_GROUP, WS_EX_LEFT
 }
 
 LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
