--- a/Evolution/Evolution.rc
+++ b/Evolution/Evolution.rc
@@ -96,8 +96,8 @@ FONT 8, "Ms Shell Dlg"
 	EDITTEXT IDM_CHANGE_GRID_TYPE_HEIGHT, 60,  90, 30, 10, ES_NUMBER
 	LTEXT    "Grid type", IDC_STATIC,     38, 110, 30, 10
 
-	AUTORADIOBUTTON "Rectangular", IDM_GRID_TYPE_RECT,  38, 130, 120,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
-	AUTORADIOBUTTON "Hexagon",     IDM_GRID_TYPE_HEX, 38, 150, 120,  8,                     0, WS_EX_LEFT
+	AUTORADIOBUTTON "Rectangular",            IDM_GRID_TYPE_RECT, 38, 130, 120,  8, WS_GROUP | WS_TABSTOP, WS_EX_LEFT
+	AUTORADIOBUTTON "Hexagon (experimental)", IDM_GRID_TYPE_HEX,  38, 150, 120,  8,                     0, WS_EX_LEFT
 
 	DEFPUSHBUTTON "OK",     IDOK,     25, 170, 60, 14, WS_GROUP, WS_EX_LEFT
 	DEFPUSHBUTTON "Cancel", IDCANCEL, 95, 170, 60, 14, WS_GROUP, WS_EX_LEFT
