--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -14,7 +14,7 @@ MoveWindow IDM_DISP_WINDOW 6075 1367 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6054 1601 331 453
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 6070 1113 316 239
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 6070 1113 26 45
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
