--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -3,14 +3,14 @@ ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW -923 1254 721 661
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PERF_WINDOW 4148 1115 301 131
-ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_CRSR_WINDOW 3844 1230 301 116
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_STAT_WINDOW 3839 1353 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DISP_WINDOW 6075 1367 181 219
+MoveWindow IDM_DISP_WINDOW 6072 1368 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 6054 1601 331 453
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
