--- a/EvoWindows/EvoWindows.vcxproj
+++ b/EvoWindows/EvoWindows.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="win32_focusPoint.cpp" />
     <ClCompile Include="win32_gridWindow.cpp" />
     <ClCompile Include="win32_histWrappers.cpp" />
+    <ClCompile Include="win32_menus.cpp" />
     <ClCompile Include="win32_protocolServer.cpp" />
     <ClCompile Include="win32_statistics.cpp" />
     <ClCompile Include="win32_status.cpp" />
@@ -179,6 +180,7 @@
     <ClInclude Include="win32_focusPoint.h" />
     <ClInclude Include="win32_gridWindow.h" />
     <ClInclude Include="win32_histWrappers.h" />
+    <ClInclude Include="win32_menus.h" />
     <ClInclude Include="win32_packGridPoint.h" />
     <ClInclude Include="win32_protocolServer.h" />
     <ClInclude Include="win32_readBuffer.h" />
