--- a/Win32_utilities/win32_utilities.rc
+++ b/Win32_utilities/win32_utilities.rc
@@ -8,7 +8,7 @@
 // Dialog resources
 //
 
-IDD_REFRESH_RATE_DIALOG DIALOGEX 0, 0, 170, 62
+IDM_REFRESH_RATE_DIALOG DIALOGEX 0, 0, 170, 62
 STYLE DS_MODALFRAME | DS_SHELLFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "Refresh Rate"
 FONT 8, "MS Shell Dlg", 0, 0, 1
