--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -8,13 +8,13 @@ MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_CRSR_WINDOW 3844 1230 301 116
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STAT_WINDOW 3839 1353 401 701
+MoveWindow IDM_STAT_WINDOW 3849 1348 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DISP_WINDOW 6048 1273 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 5987 1515 331 486
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MINI_WINDOW 6070 1113 316 239
-ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MINI_WINDOW 5837 1234 316 239
+ShowWindow IDM_MINI_WINDOW SW_HIDE
 MoveWindow IDM_MAIN_WINDOW 3840 1108 2560 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
