--- a/Evolution/WindowConfiguration5.cnf
+++ b/Evolution/WindowConfiguration5.cnf
@@ -2,8 +2,8 @@ MoveWindow IDM_HIST_INFO 3864 1112 301 116
 ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW 304 304 912 517
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 301 131
-ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_PERF_WINDOW 4154 1113 301 131
+ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
 MoveWindow IDM_CRSR_WINDOW 3865 1233 301 116
@@ -12,7 +12,7 @@ MoveWindow IDM_STAT_WINDOW 3859 1350 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_DISP_WINDOW 6138 1295 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_EDIT_WINDOW 6026 1572 331 453
+MoveWindow IDM_EDIT_WINDOW 6026 1572 331 486
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW -8 -31 316 239
 ShowWindow IDM_MINI_WINDOW SW_HIDE
