--- a/Evolution/WindowConfiguration3.cnf
+++ b/Evolution/WindowConfiguration3.cnf
@@ -1,18 +1,18 @@
-MoveWindow IDM_HIST_INFO 3840 1110 301 116
-ShowWindow IDM_HIST_INFO SW_HIDE
+MoveWindow IDM_HIST_INFO 6089 1101 301 116
+ShowWindow IDM_HIST_INFO SW_SHOWNORMAL
 MoveWindow IDM_CONS_WINDOW -923 1254 721 661
 ShowWindow IDM_CONS_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 4148 1115 301 131
+MoveWindow IDM_PERF_WINDOW 6090 1217 301 131
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW 3832 1057 2576 1056
 ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
-MoveWindow IDM_CRSR_WINDOW 3844 1230 301 116
+MoveWindow IDM_CRSR_WINDOW 3859 1123 301 116
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STAT_WINDOW 3849 1348 401 701
+MoveWindow IDM_STAT_WINDOW 5992 1349 401 701
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DISP_WINDOW 6048 1273 181 219
+MoveWindow IDM_DISP_WINDOW 3853 1319 181 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_EDIT_WINDOW 5983 1516 331 486
+MoveWindow IDM_EDIT_WINDOW 3839 1568 331 486
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW 5837 1234 316 239
 ShowWindow IDM_MINI_WINDOW SW_HIDE
