--- a/Win32_utilities/Win32_utilities.vcxproj
+++ b/Win32_utilities/Win32_utilities.vcxproj
@@ -151,6 +151,7 @@
     <ClInclude Include="win32_baseDialog.h" />
     <ClInclude Include="win32_baseWindow.h" />
     <ClInclude Include="win32_clut.h" />
+    <ClInclude Include="win32_delay.h" />
     <ClInclude Include="win32_graphicsInterface.h" />
     <ClInclude Include="win32_refreshRateDialog.h" />
     <ClInclude Include="win32_textBuffer.h" />
@@ -166,7 +167,6 @@
     <ClInclude Include="win32_tooltip.h" />
     <ClInclude Include="win32_util.h" />
     <ClInclude Include="win32_util_resource.h" />
-    <ClInclude Include="win32_viewCollection.h" />
     <ClInclude Include="win32_winManager.h" />
   </ItemGroup>
   <ItemGroup>
