--- a/Win32_utilities/Win32_utilities.vcxproj.filters
+++ b/Win32_utilities/Win32_utilities.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="win32_aboutBox.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="win32_readBuffer.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="win32_baseWindow.cpp">
