Work on refresh time. Reduce flicker, but stay reactive. Not perfect, but good enough for now.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *_RES.RES
 *.res
 *.prt
+*.out
 
 SyncToy_*.*
 
@@ -267,3 +268,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+*.out
