--- a/NNetWindows/NNetSimuWindows.vcxproj.filters
+++ b/NNetWindows/NNetSimuWindows.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="win32_NNetHistWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NNetReadBuffer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -34,6 +31,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_NNetWorkThreadInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_NNetReadBuffer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
