--- a/EvoWindows/EvoWindows.vcxproj.filters
+++ b/EvoWindows/EvoWindows.vcxproj.filters
@@ -33,9 +33,6 @@
     <ClCompile Include="win32_editorWrappers.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="win32_evoHistWindow.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="win32_focusPoint.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -69,6 +66,9 @@
     <ClCompile Include="win32_EvoWorkThreadInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="win32_speedControl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="targetver.h">
@@ -87,9 +87,6 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_editorWrappers.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="win32_evoHistWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_focusPoint.h">
@@ -138,6 +135,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="win32_EvoWorkThreadInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_speedControl.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="win32_zoomControl.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
