--- a/Evolution/Evolution.vcxproj.filters
+++ b/Evolution/Evolution.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="win32_resetDlg.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="GenerationDisplay.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -57,6 +60,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="win32_resetDlg.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="GenerationDisplay.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
