--- a/NNetSimu/WindowConfiguration1.cnf
+++ b/NNetSimu/WindowConfiguration1.cnf
@@ -1,2 +1,4 @@
-MoveWindow IDM_APPL_WINDOW 410 472 1920 1021
+MoveWindow IDM_APPL_WINDOW 489 244 1617 1021
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
+MoveWindow IDM_MAIN_WINDOW 497 295 1601 932
+ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
