--- a/Utilities/Utilities.vcxproj
+++ b/Utilities/Utilities.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="EnumArray.h" />
     <ClInclude Include="EventInterface.h" />
     <ClInclude Include="Int24.h" />
+    <ClInclude Include="LogarithmicTrackbar.h" />
     <ClInclude Include="ModelInterface.h" />
     <ClInclude Include="NamedType.h" />
     <ClInclude Include="observerInterface.h" />
@@ -177,6 +178,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BoolOp.cpp" />
+    <ClCompile Include="LogarithmicTrackbar.cpp" />
     <ClCompile Include="SmoothMove.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
